lab1/Test/L1-A-10-20.output
Error Type B at Line 8
Error Type A at Line 12
Error Type A at Line 20
Error Type B at Line 22
Error Type A at Line 26
Error Type B at Line 27
Error Type B at Line 31
Error Type B at Line 41
