lab1/Test/L1-A-10-20.cmm
int ;
struct {
  struct At8 {
  }b3RjrmAMTE ;
}GSf1t9xIJRTjEIr ( ) {
  float XCt0AZvjALZA = uFblKR1oy_dWsZPZyH , qYub_GE 
    ;
/   if ( N5bS88iN6 )   IDY9O1ORGr_KFd ;
else   if ( bUI0B9Rc )   while ( zAT09T43XrY6rInmZ 
    )   return E || uN && fSiwqEJdgW2IF9Aocy / ( v = f2IQpYWZpwfmPbv 
    != doXz7VPk4VRvbmm04H + A * ! oSn ( zWUBgrQi , beE 
    = cU9HxIy :|| vS7nJPe_pupDdcNkhx3a < ! ! XyAfzalpA8XD 
    [ OH2 && x <= - ! ! K3ck [ zDh_Tfvv && vdSK_ITxj == 
    MUg - DjS4XsvRuhPC_OW ( Let = DM || D1l2d8ERJXvXd 
    > rotQvLtR - 1876390168 ) ] >= hI6lVh0zwIteBcIY * 
    ! 1924339631.1147857377 . K_dejv08Uh2Pp ] . rWpa8w7KgwJGXP 
    ) - - ! - - k3KNjoJdXlewsxPI4 ( ) ) ;


$
}
struct nriay0gkDiBzzjEj12dK pRtRR9 struct [ 2101908362 
  ] , O 

;
int ;'
int IWo1R5 ( int E3sUg8l9bUuQpyJRgCkD , . int GugGs0iMAjgHGH 
  ) {
  if ( MZlcRNIIQ4tWDe5 )   if ( s7SQ9a5Xf3iw7kTJ_c 
    ) {
struct   }

}
int ;
int ;
int ;
int ;
int ;
int ;
int ZstZnzbnrLukTQYVNXHr ( ) {
*   MjmGLF13 ;
  gGwm ;
  if ( IpBGQJEnA31KG )   WiqMzP0hbwmqqYd_S3h ;
else   gQ5hFTrD6rY9tU3lU1ec ;

}
int ;
int ;
int ;
int ;
